# Quiz_app

quiz_backend/: .env  pyproject.toml
quiz_backend/quiz_backend/: route.py  settings.py
quiz_backend/quiz_backend/controllers/: auth_controllers.py  user_controllers.py
quiz_backend/quiz_backend/db/: db_connector.py
quiz_backend/quiz_backend/models/: admin_models.py  quiz_models.py  user_models.py
quiz_backend/quiz_backend/utils/: exception.py  imports.py
